fixed upload options alignment

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ main {
 
 
 #upload-options {
+    margin-left: -6rem;
     display: flex;
     flex-direction: column;
     align-items: center;
